--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # priority  :debug<info<warn<error
 #you cannot specify every priority with different file for log4j 
 #log4j.rootLogger=debug,stdout,info,debug,warn,error
-log4j.rootLogger=debug,stdout
+log4j.rootLogger=error,stdout
 
 #console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
